<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intraprocess_loaned</name>
  <version>0.0.1</version>
  <description>Simple program to test intra-process and loaned messages.</description>

  <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>

  <license>Apache License 2.0</license>

  <author email="esteve.fernandez@tier4.jp">Esteve Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
